# iter-together

./: .flake8  LICENSE  README.md  README.rst  readthedocs.yml  setup.cfg  setup.py  tox.ini  travis.yml
docs/source/: conf.py  index.rst  utils.rst
iter_together_venv/: pyvenv.cfg
src/iter_together/: __init__.py  utils.py
src/iter_together_pma/: __init__.py  utils.py  version.py
tests/: __init__.py  constants.py  test_iter.py  test_utils.py
tests/test_ldc/: test_my_other_stuff.py
