[metadata]
name = iter_together_pma
version = 0.0.1-dev
description = A package to iterate over multiple iterables together
long_description = file: README.rst
python_requires = 
   ">=3.6"

url = https://github.com/commons-research/iter-together

author = Pierre-Marie Allard
author_email = pierre-marie.allard@unifr.ch
maintainer = Pierre-Marie Allard
maintainer_email = pierre-marie.allard@unifr.ch

license = MIT
license_file = LICENSE


# See https://pypi.org/classifiers/
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

keywords =
    iter
    iterator
    zip
    zip_
    test




[options]
install_required =
    typing_extensions
    requests
    numpy
    pandas

    
packages = find:
package_dir =
   = src

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx_rtd_theme
    sphinx-autodoc-typehints
    sphinxcontrib-napoleon
    sphinxcontrib-programoutput
    sphinxcontrib-trio
    sphinx-issues
    sphinx-click
testing =
    pytest